# media-split

./: README.md  media-split.cabal
executable/: .#Main.hs  Main.hs
src/Media/: Split.hs
test/Media/: SplitSpec.hs
