name: media-split
version: 0.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
copyright: 2015 brady.ouren <brady.ouren@gmail.com>
maintainer: brady.ouren <brady.ouren@gmail.com>
synopsis: split media up by types and send to different locations
description:
    split media up by types and send to different locations
category: automation
author: brady.ouren <brady.ouren@gmail.com>
tested-with: GHC ==7.8 GHC ==7.6
extra-source-files:
  README.md

source-repository head
  type:     git
  location: https://github.com/tippenein/media-split

library
  hs-source-dirs: src
  exposed-modules:
      Media.Split
  build-depends:
      base ==4.*
    , filepath
    , directory
    , text
    , process
  default-language: Haskell2010

executable media-split
  hs-source-dirs: executable
  main-is: Main.hs
  build-depends:
      base -any
    , optparse-applicative
    , media-split -any
  if flag(ekg)
    build-depends:
      ekg >= 0.4 && < 0.5
  default-language: Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -fno-warn-missing-signatures

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
      base -any
    , media-split -any
    , hspec ==2.*
    , HUnit -any
    , QuickCheck -any
  default-language:    Haskell2010
  other-modules:
      Media.SplitSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fno-warn-missing-signatures

flag ekg
  manual: True
  default: False
  description: Compile with ekg monitoring.
